--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ package-lock.json
 resources/extras/thumbnail.jpg
 
 # Directories
+# resources/auth
+# resources/temp
+resources/
 addons/
 vcbot/
 __pycache__/
