upstream with dev: fix carbon

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ https://github.com/New-dev0/Telethon/archive/platy.zip
 python-decouple
 python-dotenv
 
+# for VC
+pytgcalls>=3.0.0.dev24
+
 # optional
 akinator
 apscheduler
