--- a/.gitignore
+++ b/.gitignore
@@ -8,18 +8,21 @@ test*
 *.webp
 *.mp4
 *.tgs
+*.txt
 /*.jpg
 /*.png
 /*.mp4
 *.log
 target/npmlist.json
 package-lock.json
+ultroid.json
 resources/extras/thumbnail.jpg
 
 # Directories
-# resources/auth
-# resources/temp
-resources/
+resources/auth
+resources/temp
+resources/downloads
+# resources/
 __ignore__
 addons/
 vcbot/
