--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,69 @@
 # Important Requirements here.
-
 https://github.com/New-dev0/Telethon/archive/platy.zip
 python-decouple
 python-dotenv
+
+# removed
+redis[hiredis]
+pymongo[srv]
+pyyaml
+pytgcalls>=3.0.0.dev24
+
+# optional
+akinator
+apscheduler
+aiohttp
+bs4
+enhancer>=0.3.4
+git+https://github.com/buddhhu/img2html.git@c44170d#egg=img2html
+heroku3
+gitpython
+google-api-python-client
+htmlwebshot
+lottie
+lxml
+numpy>=1.21.2
+oauth2client
+opencv-python-headless
+pillow>=7.0.0
+profanitydetector
+psutil
+pypdf2>=1.26.0
+pytz
+qrcode
+requests
+tabulate
+git+https://github.com/xditya/telegraph.git@41fd800#egg=telegraph
+tgcrypto
+youtube-search-python
+yt-dlp
+
+# addons
+covid
+emoji
+fonttools
+gtts
+gingerit
+jikanpy
+git+https://github.com/New-dev0/AsyncLyricsExtractor.git
+phlogo
+pokedex.py
+pyfiglet
+pygments
+pyjokes
+quotefancy
+shazamio
+speechrecognition
+speedtest-cli
+textblob
+wikipedia
+
+# custom
+pyrogram
+pymediainfo
+music_tag
+pygithub
+spotdl
+uvloop
+imgur_python
+aiofiles
