--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Important Requirements here.
-https://github.com/New-dev0/Telethon/archive/platy.zip
+https://github.com/lanowde/telethon-patch/archive/main.zip
+https://github.com/lanowde/telethon-testing/archive/main.zip
 python-decouple
 python-dotenv
 
@@ -64,7 +65,8 @@ music_tag
 uvloop
 aiodns
 
-# Extras - spotdl, pygithub, imgur_python, openai
+# Extras:
+# - spotdl, pygithub, imgur_python, openai
 # - https://github.com/1Danish-00/glitch_me.git#egg=glitch_me
 # - https://github.com/lanowde/instagrapi/archive/master.zip
 # - flask, gunicorn, scikit-image
