--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ test*
 target/npmlist.json
 package-lock.json
 ultroid.json
+localdb.json
 resources/extras/thumbnail.jpg
 
 # Directories
@@ -27,6 +28,7 @@ addons/
 vcbot/
 __pycache__/
 venv/
+.venv/
 node_modules/
 glitch_me/
 src/
