--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ lxml
 numpy>=1.21.2
 oauth2client
 opencv-python-headless
-pillow==9.5.0
+pillow
 profanitydetector
 psutil
 pypdf
@@ -59,7 +59,7 @@ textblob
 wikipedia
 
 # custom
-pyrogram
+https://github.com/null-nick/Pyrogram-Mod/archive/refs/heads/main.zip
 pymediainfo
 music_tag
 uvloop
