--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,8 @@ services:
       LOG_CHANNEL: $LOG_CHANNEL # Not mandatory
       DATABASE_URL: $DATABASE_URL  # defaults to None
       OKTETO_TOKEN: $OKTETO_TOKEN
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "3"
